Fix: Maven - test service